--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .App {
+  display: flex;
+  /* justify-content: center;
+  align-items: center; */
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  position: relative;
+  /* center the div horizontally */
+  margin: auto;
 }
 
 @media (prefers-reduced-motion: no-preference) {
