--- a/src/Components/Search/_style.module.scss
+++ b/src/Components/Search/_style.module.scss
@@ -9,7 +9,7 @@
     display: flex;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
-    height: 35px;
+    height: 55px;
     width: 300px;
     margin: auto;
     position: fixed;
@@ -35,12 +35,14 @@
       width: 100%;
       color: #eeeeee;
       background-color: transparent;
+      font-size: 18px;
     }
 
     button {
       border: none;
       color: #ccc;
       cursor: pointer;
+      font-size: 18px;
       background-color: transparent;
       &:hover {
         color: #ccc;
@@ -52,12 +54,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 25px;
-    margin: 32px auto;
-
-    // > * {
-    //   width: calc(
-    //     100% / 3
-    //   ); // Adjust the width based on the number of children per line
-    // }
+    margin: 52px auto;
+    justify-content: center;
   }
 }
