--- a/src/Components/Game/_style.module.scss
+++ b/src/Components/Game/_style.module.scss
@@ -17,16 +17,22 @@
       flex-wrap: wrap;
       font-weight: 600;
       color: #eeeeee;
+      padding-bottom: 5px;
     }
 
-    &__plateforms {
+    &__consoles {
       display: flex;
       align-items: center;
       justify-content: flex-start;
-      gap: 5px;
+      gap: 2px;
       flex-wrap: wrap;
       font-size: 12px;
       color: #eeeeee;
+      &__item {
+        background-color: rgba(110, 110, 110, 0.2);
+        padding: 0px 5px;
+        border-radius: 5px;
+      }
     }
   }
   &__image-wrapper {
