--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   /* justify-content: center;
   align-items: center; */
   /* center the div horizontally */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   margin: auto;
 }
 
@@ -22,6 +21,12 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.content {
+  display: flex;
+  max-width: 1200px;
+  margin: auto;
 }
 
 .App-link {
